INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(mTLowerAndUpperBound_SRC mTLowerAndUpperBound_c.cc)
ADD_LIBRARY(mTLowerAndUpperBound STATIC ${mTLowerAndUpperBound_SRC})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} mTLowerAndUpperBound)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(test_mtbound_SRC test_mtbound.cc)
  ADD_EXECUTABLE(test_mtbound ${test_mtbound_SRC})
  TARGET_LINK_LIBRARIES(test_mtbound mTLowerAndUpperBound)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_mtbound)
  SET_TARGET_PROPERTIES(test_mtbound PROPERTIES INSTALL_RPATH "@loader_path/../lib")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})
